--- a/packages/core/src/progress-circle/progress-circle.element.scss
+++ b/packages/core/src/progress-circle/progress-circle.element.scss
@@ -2,7 +2,8 @@
 @import './../styles/mixins/mixins';
 
 :host {
-  --ring-color: #{$cds-token-color-neutral-200};
+  --ring-color: #{$cds-token-color-neutral-1000};
+  --ring-opacity: 0.15;
   --fill-color: #{$cds-token-color-action-800};
   font-family: inherit;
   font-size: inherit;
@@ -22,6 +23,7 @@ svg {
 
   .backstroke {
     stroke: var(--ring-color);
+    opacity: var(--ring-opacity);
   }
 
   .arcstroke {
@@ -64,31 +66,37 @@ svg {
 :host([status='info']) {
   --ring-color: #{$cds-token-color-action-50};
   --fill-color: #{$cds-token-color-action-800};
+  --ring-opacity: 1;
 }
 
 :host([status='success']) {
   --ring-color: #{$cds-token-color-success-50};
   --fill-color: #{$cds-token-color-success-800};
+  --ring-opacity: 1;
 }
 
 :host([status='warning']) {
   --ring-color: #{$cds-token-color-warning-100};
   --fill-color: #{$cds-token-color-warning-900};
+  --ring-opacity: 1;
 }
 
 :host([status='danger']) {
   --ring-color: #{$cds-token-color-danger-50};
   --fill-color: #{$cds-token-color-danger-900};
+  --ring-opacity: 1;
 }
 
 :host([status='unknown']) {
   --ring-color: #{$cds-token-color-secondary-action-50};
   --fill-color: #{$cds-token-color-secondary-action-900};
+  --ring-opacity: 1;
 }
 
 :host([inverse]) {
   --ring-color: #{$cds-token-color-neutral-700};
   --fill-color: #{$cds-token-color-neutral-0};
+  --ring-opacity: 1;
 }
 
 @keyframes spin {
